--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,36 @@
 {
+    "version": "2.0.0",
+    "options": {
+        "cwd": "${workspaceFolder}/build"
+    },
+
     "tasks": [
         {
-            "type": "cppbuild",
-            "label": "C/C++: g++.exe 生成活动文件",
-            "command": "C:\\mingw64\\bin\\g++.exe",
+            "type": "shell",
+            "label": "cmake",
+            "command": "cmake",
             "args": [
-                "-g",
-                "main.cpp",
-                "swap.cpp",
-                "-o",
-                "${fileDirname}\\out.exe"
+                "..",
             ],
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
+        },
+        {
+            "label": "make",
             "group": {
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "调试器生成的任务。"
+            "command": "mingw32-make.exe",
+            "args": [
+
+            ],
+        },
+        {
+            "label": "Build",
+            "dependsOn":[
+                "cmake",
+                "make"
+            ]
         }
     ],
-    "version": "2.0.0"
+    
 }
